# GitVersion.cmake

./: .gitattributes  .gitignore  GitVersion.cmake  README.md  README_zh.md  pyproject.toml  requirements-dev.txt  run_tests.py
.github/workflows/: macos.yml  release.yml  test.yml  tests.yml  ubuntu.yml  windows.yml
cmake/: GitVersion.cmake
docs/: TESTING.md  TESTING_zh.md
examples/: README.md
examples/basic_usage/: CMakeLists.txt  main.cpp  version.h.in
tests/: README.md  __init__.py  conftest.py
tests/advanced/: __init__.py  custom_source_dir_test.py  dirty_state_test.py  multiple_tags_test.py
tests/basic/: __init__.py  development_version_test.py  no_tag_test.py  version_tag_test.py
tests/edge_cases/: __init__.py  branching_test.py  fail_on_mismatch_test.py  malformed_tags_test.py
tests/utils/: __init__.py  cmake_project.py  git_environment.py
