[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitversion-cmake"
version = "0.1.0"
description = "CMake module for automating versioning with Git"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"

[tool.pytest]
testpaths = ["tests"]
python_files = "*_test.py"
addopts = "--verbose"

[tool.pytest.ini_options]
markers = [
    "basic: basic functionality tests",
    "advanced: advanced functionality tests",
    "edge_cases: edge case tests"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
] 